--- a/PagingVideoPlayer/Base.lproj/Main.storyboard
+++ b/PagingVideoPlayer/Base.lproj/Main.storyboard
@@ -1,24 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ffm-QM-ftF">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home View Controller-->
+        <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="PagingVideoPlayer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qgi-Iq-eEj">
+                                <rect key="frame" x="0.0" y="64" width="375" height="211"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="qgi-Iq-eEj" secondAttribute="height" multiplier="16:9" priority="750" id="1w4-Vw-9cT"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="NVx-Rc-nhE" kind="embed" id="PCC-Tr-U7F"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="qgi-Iq-eEj" secondAttribute="trailing" id="5ah-N8-gqL"/>
+                            <constraint firstItem="qgi-Iq-eEj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="alG-uH-Cum"/>
+                            <constraint firstItem="qgi-Iq-eEj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gft-Vv-TE2"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="qgi-Iq-eEj" secondAttribute="bottom" id="qbP-Pn-w5A"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Home" id="rBF-D4-3VO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="132.68365817091455"/>
+        </scene>
+        <!--Videos Page View Controller-->
+        <scene sceneID="aCB-KO-0Rj">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="NVx-Rc-nhE" customClass="VideosPageViewController" customModule="PagingVideoPlayer" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="43q-o9-X2a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1076" y="674"/>
+        </scene>
+        <!--Video Player View Controller-->
+        <scene sceneID="bGx-rD-54A">
+            <objects>
+                <viewController storyboardIdentifier="VideoPlayerViewController" id="dy2-84-PuI" customClass="VideoPlayerViewController" customModule="PagingVideoPlayer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="z0C-Pp-tY6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="75h-DP-sGn" customClass="VideoPlayerView" customModule="PagingVideoPlayer" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="75h-DP-sGn" firstAttribute="leading" secondItem="iol-3E-WO4" secondAttribute="leading" id="0gF-Fp-lSI"/>
+                            <constraint firstItem="75h-DP-sGn" firstAttribute="top" secondItem="iol-3E-WO4" secondAttribute="top" id="47K-Vc-M9d"/>
+                            <constraint firstAttribute="bottom" secondItem="75h-DP-sGn" secondAttribute="bottom" id="BQh-DH-pin"/>
+                            <constraint firstItem="iol-3E-WO4" firstAttribute="trailing" secondItem="75h-DP-sGn" secondAttribute="trailing" id="Ite-vl-Dba"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="iol-3E-WO4"/>
+                    </view>
+                    <connections>
+                        <outlet property="videoPlayerView" destination="75h-DP-sGn" id="kb9-sq-n3J"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cfz-vX-VxM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1852" y="878"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="QUK-mL-hx6">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hGl-zw-rgj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ffm-QM-ftF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tr7-RD-umA">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ogh-MD-BnH"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="210" y="133"/>
         </scene>
     </scenes>
 </document>
